# Platform-Microservices-and-ML-based-Valuation-Real-Estate-Management

./: README.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/server/: config.py  main.py  utils.py
backend/server/dependencies/: auth.py  grpc.py  requests.py
backend/server/events/: startup.py
backend/server/pb/: ads_pb2_grpc.py  auth_pb2.py  auth_pb2_grpc.py  properties_pb2_grpc.py  valuation_pb2_grpc.py
backend/server/routers/: __init__.py
backend/server/routers/ads/: __init__.py  v1.py
backend/server/routers/auth/: __init__.py  v1.py
backend/server/routers/docs/: health.md
backend/server/routers/docs/v1/: ads.md
backend/server/routers/docs/v1/ads/: count.md  {ad_id}.md
backend/server/routers/docs/v1/auth/: login.md  otp.md  register.md  validate.md
backend/server/routers/docs/v1/spm/: properties.md
backend/server/routers/docs/v1/spm/properties/: count.md  me.md  {property_id_nma}.md
backend/server/routers/docs/v1/spm/properties/me/: count.md
backend/server/routers/docs/v1/spm/properties/{property_id_nma}/: units.md
backend/server/routers/docs/v1/spm/properties/{property_id_nma}/units/: count.md
backend/server/routers/docs/v1/spm/units/: {unit_id}.md
backend/server/routers/docs/v1/spm/units/{unit_id}/: valuations.md
backend/server/routers/health/: __init__.py
backend/server/routers/realestate/: __init__.py  v1.py
backend/server/schemas/: __init__.py
backend/server/schemas/requests/: ads.py  auth.py
backend/server/schemas/responses/: __init__.py  ads.py  auth.py  health.py  realestate.py
client/: Dockerfile  vite.config.js
client/src/: app.css
client/src/components/: Accordion.svelte  Card.svelte  LineChart.svelte  ListingForm.svelte  Modal.svelte  NavButton.svelte  NumberGrid.svelte  Pagination.svelte  ValuationChart.svelte
client/src/routes/: +layout.svelte  +page.svelte  Header.svelte
client/src/routes/listings/: +page.svelte
client/src/stores/: auth.js
data/: pyproject.toml
data/pipeline/: collection.py  main.py  push.py  schemas.py
models/: main.py  pyproject.toml  regressors.py
services/acl/: Dockerfile  pyproject.toml
services/acl/app/: auth.py  config.py  events.py  main.py  models.py  repositories.py  services.py  utils.py
services/acl/app/pb/: auth_pb2_grpc.py
services/acl/app/protos/: auth.proto
services/realestate/: Dockerfile  pyproject.toml
services/realestate/app/: client.py  config.py  main.py  models.py  repositories.py  schemas.py  services.py
services/realestate/app/pb/: ads_pb2.py  ads_pb2_grpc.py  properties_pb2.py  properties_pb2_grpc.py
services/realestate/app/protos/: ads.proto  properties.proto
services/valuation/: Dockerfile  pyproject.toml
services/valuation/app/: client.py  config.py  etl.py  main.py  realestate.py  services.py
services/valuation/app/models/: valuation.pkl
services/valuation/app/pb/: properties_pb2.py  properties_pb2_grpc.py  valuation_pb2.py  valuation_pb2_grpc.py
services/valuation/app/protos/: valuation.proto
(+10 files in other folders)
