[tool.poetry]
name = "data"
version = "0.1.0"
description = "Data engineering and preparation module for the SPM application"
authors = ["rifatrakib <Rakib.1508@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.3.2"
beanie = "^1.27.0"
pandas = "^2.2.3"
jsonlines = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
