[tool.poetry]
name = "models"
version = "0.1.0"
description = "Machine learning module for the SPM application"
authors = ["rifatrakib <Rakib.1508@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
jupyterlab = "^4.3.2"
lightgbm = "^4.5.0"
xgboost = "^2.1.3"
catboost = "^1.2.7"
jsonlines = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
